# pysorteddict-staging

./: .gitattributes  .gitignore  pyproject.toml
docs/: conf.py  installation.md  usage.md
docs/_static/styles/: custom.css
docs/extra/simple/: index.html
docs/extra/simple/pysorteddict/: index.html
